--- a/src/app/components/maps/map/map.component.html
+++ b/src/app/components/maps/map/map.component.html
@@ -1,2 +1,2 @@
-<div class="map" leaflet [leafletOptions]="options">
+<div leaflet class="map" (leafletClick)="onMapClick($event)" leaflet [leafletOptions]="options">
 </div>
