locations are being read correctly from the api and will be displayed on the map. Click event for locations added aswell

--- a/src/app/components/maps/map/map.component.html
+++ b/src/app/components/maps/map/map.component.html
@@ -1,2 +1,3 @@
-<div leaflet class="map" (leafletClick)="onMapClick($event)" leaflet [leafletOptions]="options">
+<div leaflet class="map" (leafletClick)="onMapClick($event)" leaflet [leafletOptions]="options"
+    [leafletLayers]="layers">
 </div>
