tooltips for locations

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~leaflet/dist/leaflet.css";
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.popup-element {
+    width: 100px !important;
+    height: 100px !important;
+}
+
+.leaflet-pane {
+    width: 100px !important;
+    height: 100px !important;
+}
