--- a/src/app/components/tooltips/location-tooltip/location-tooltip.component.html
+++ b/src/app/components/tooltips/location-tooltip/location-tooltip.component.html
@@ -1,1 +1,11 @@
-<p>{{locationTitle}}</p>
+<div class="card" style="max-width: 13rem;">
+    <img class="card-img-top" src="http://localhost:3001/media-upload/media_1589749714935_6e6990.png"
+        alt="Card image cap">
+    <div class="card-body">
+        <ngb-rating [max]="5" [rate]="3"></ngb-rating>
+        <h5 class="card-title">{{location.name}}</h5>
+        <p class="card-text">{{location.description}}</p>
+        <p>{{location.address.street}} {{location.address.number}} </p>
+        <p>{{location.address.city.zipcode}} {{location.address.city.name}}, {{location.address.country.name}}</p>
+    </div>
+</div>
