--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
     <app-navbar></app-navbar>
     <app-map></app-map>
 </div>
+<app-category-filter></app-category-filter>
 
 <router-outlet></router-outlet>
