work in progress insert rating

--- a/src/app/components/dialog/location-dialog/location-detail/location-detail.component.css
+++ b/src/app/components/dialog/location-dialog/location-detail/location-detail.component.css
@@ -12,3 +12,11 @@
     background: #f2f2f2;
 }
 
+/* Important part */
+/* .modal-dialog{
+    overflow-y: initial !important
+}
+.modal-body{
+    max-height: 100%;
+    overflow-y: auto;
+} */
