--- a/src/app/components/dialog/location-dialog/location-detail/location-detail.component.html
+++ b/src/app/components/dialog/location-dialog/location-detail/location-detail.component.html
@@ -52,7 +52,7 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-2">
-                                        <img style="max-height: 32px; max-width: 32px;" src="assets/images/account.svg"
+                                        <img style="max-height: 24px; max-width: 24px;" src="assets/images/account.svg"
                                             alt="">
                                     </div>
                                     <div class="col-2"><a href="/user/21">{{location.createUser.name}}</a>
@@ -81,62 +81,67 @@
                 </div>
 
             </div>
-            <div class="col-lg-4 col-12">
-                <h3>Bewertungen</h3>
-                <hr>
-                <div *ngFor="let rating of ratings">
-                    <div class="row">
-                        <div class="col-3">
-                            <img style="max-height: 32px; max-width: 32px;" src="assets/images/account.svg" alt="">
+            <div style="position: relative;" class="col-lg-4 col-12">
+                <h3 class="border-bottom">Bewertungen</h3>
+                <div style="max-height: 20rem; overflow-y: scroll; overflow-x: hidden;">
+                    <div *ngFor="let rating of ratings">
+                        <div class="row" style="margin-bottom: 10px;">
+                            <div class="col-2">
+                                <img style="max-height: 24px; max-width: 24px;" src="assets/images/account.svg" alt="">
+                            </div>
+                            <div class="col-5">
+                                <a href="/user/{{rating.createdUser.id}}">{{rating.createdUser.name}}</a>
+                            </div>
+                            <div class="col-2">
+                                <ngb-rating [max]="5" [rate]="rating.value"></ngb-rating>
+                            </div>
+                            <div class="col-2"></div>
                         </div>
-                        <div class="col-6">
-                            <p>{{rating.createdUser.name}}</p>
-                        </div>
-                        <div class="col-3">
-                            <ngb-rating [max]="5" [rate]="rating.value"></ngb-rating>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <p>{{rating.comment}}</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <small>{{rating.createdTime | date: 'dd.MM.yyyy hh:mm'}}</small>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <form style="position:fixed; bottom: 0;" [formGroup]="ratingForm" [formControl]
-                    (ngSubmit)="ratingForm.value">
-                    <div class="form-group">
                         <div class="row">
-                            <div class="col-12 ml-auto">
-                                <ngb-rating [max]="5" [rate]="3"></ngb-rating>
+                            <div class="col-12">
+                                <p>{{rating.comment}}</p>
                             </div>
                         </div>
-                        <textarea formControlName="locationdescription" rows="2" class="form-control"
-                            id="locationdescription" aria-describedby="locationdescriptionHelp"
-                            placeholder="z.B. Naturpark Bremen"></textarea>
-
+                        <div class="row">
+                            <div class="col-12">
+                                <small>{{rating.createdTime | date: 'dd.MM.yyyy hh:mm'}}</small>
+                            </div>
+                        </div>
+                        <hr>
                     </div>
-                    <button class="btn btn-primary" type="submit">bewertung abschicken</button>
-
-                </form>
+                </div>
+                <div style="position:absolute; bottom: 0;" class="row">
+                    <hr>
+                    <div class="col-12">
+                        <form [formGroup]="ratingForm" [formControl] (ngSubmit)="ratingForm.value">
+                            <div class="form-group">
+                                <textarea formControlName="locationdescription" rows="2" class="form-control"
+                                    id="locationdescription" aria-describedby="locationdescriptionHelp"
+                                    placeholder="z.B. Naturpark Bremen"></textarea>
+                                <div class="row">
+                                    <div class="col-8 ml-auto">
+                                        <ngb-rating [max]="5" [rate]="3"></ngb-rating>
+                                    </div>
+                                    <div class="col-4">
+                                        <button class="btn btn-primary" type="submit">Send</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- <div class="modal-footer">
+        <!-- <div class="modal-footer">
         <button type="button" class="btn btn-outline-dark" (click)="modal.dismiss('Save click')">Save</button>
     </div> -->
-</div>
-
-<div *ngIf="!location">
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">No location.</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-        </button>
     </div>
-</div>
+
+    <div *ngIf="!location">
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">No location.</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
