--- a/src/app/components/navigation/navbar/navbar.component.html
+++ b/src/app/components/navigation/navbar/navbar.component.html
@@ -1,21 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" [routerLink]="'.'">PICS AND PLACES</a>
-
-    <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
     <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
         &#9776;
     </button>
 
-    <!-- Step 2: Add the ngbCollapse directive to the element below. -->
+
     <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto">
+        <ul *ngIf="!isAuthenticated" class="navbar-nav ml-auto">
             <li class="nav-item">
                 <!-- Step 4: Close the menu when a link is clicked. -->
-                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Login</a>
+                <a class="nav-link" [routerLink]="'/auth/login'" (click)="isMenuCollapsed = true">Login</a>
             </li>
             <li class="nav-item" ngbPopover="Hello!">
-                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Signup</a>
+                <a class="nav-link" [routerLink]="'/auth/signup'" (click)="isMenuCollapsed = true">Signup</a>
             </li>
         </ul>
+        <div class="navbar-nav ml-auto" *ngIf="isAuthenticated">
+            <p class="navbar-nav ml-auto">Wilkommen, {{currentUser.name}}</p>
+            <a class="navbar-nav" style="margin-left: 1rem;" href="/" (click)="logout()">Logout</a>
+        </div>
     </div>
 </nav>
