--- a/src/app/components/dialog/location-dialog/location-edit/location-edit.component.html
+++ b/src/app/components/dialog/location-dialog/location-edit/location-edit.component.html
@@ -57,8 +57,7 @@
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-danger mr-auto" [disabled]="!locationForm.valid"
-            (click)="deleteLocation()">Löschen</button>
+        <button type="button" class="btn btn-danger mr-auto" (click)="deleteLocation()">Löschen</button>
         <button type="button" class="btn btn-outline-dark" [disabled]="!locationForm.valid"
             (click)="onSubmit(locationForm.value)">Speichern</button>
 
