--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,11 @@
     margin: 0 !important;
 }
 
-body {
-    overflow-y: hidden;
+
+html, body {
+    overflow-y: auto;
 }
+
 
 .carousel-inner img {
     margin: auto !important;
