--- a/src/app/components/dialog/location-dialog/location-detail/location-detail.component.html
+++ b/src/app/components/dialog/location-dialog/location-detail/location-detail.component.html
@@ -94,7 +94,8 @@
                                 <a href="/user/{{rating.createdUser.id}}">{{rating.createdUser.name}}</a>
                             </div>
                             <div class="col-2">
-                                <ngb-rating [max]="5" [rate]="rating.value"></ngb-rating>
+                                <ngb-rating [readonly]="currentUser.id !== rating.createdUser.id" [max]="5"
+                                    [rate]="rating.value"></ngb-rating>
                             </div>
                             <div class="col-2"></div>
                         </div>
@@ -104,14 +105,20 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-12">
+                            <div class="col-8">
                                 <small>{{rating.createdTime | date: 'dd.MM.yyyy hh:mm'}}</small>
                             </div>
+                            <div *ngIf="currentUser.id === rating.createdUser.id" class="col-2"><button
+                                    class="btn btn-primary">
+                                    Edit
+                                </button></div>
+                            <div (click)="deleteRating(rating.id)" *ngIf="currentUser.id === rating.createdUser.id"
+                                class="col-2"><button class="btn btn-danger">Delete</button></div>
                         </div>
                         <hr>
                     </div>
                 </div>
-                <div style="position:realtive; bottom: 0;" class="row">
+                <div style="bottom: 0;" class="row">
                     <hr>
                     <div class="col-12">
                         <form *ngIf="currentUser" [formGroup]="ratingForm" [formControl] (ngSubmit)="onSubmit()">
