--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~leaflet/dist/leaflet.css";
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import '~simplebar/dist/simplebar.css';
 
 .leaflet-popup-content {
     margin: 0 !important;
@@ -14,7 +15,11 @@ html, body {
 
 .carousel-inner img {
     margin: auto !important;
-  }
+}
+
+.simplebar-scroll-content {
+  box-sizing: content-box;
+}
 
   @media (min-width: 1200px) { /* Breite beträgt höchstens 1024px */
     .carousel-control-next-icon,
