tour suggestion, work in progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
 
 <app-category-filter></app-category-filter>
 <app-search-location></app-search-location>
+<app-tour-settings></app-tour-settings>
 
 <router-outlet></router-outlet>
