work in progress add/edit/delete tour

--- a/src/app/components/dialog/tour-dialog/tour-detail/tour-detail.component.html
+++ b/src/app/components/dialog/tour-dialog/tour-detail/tour-detail.component.html
@@ -1,1 +1,10 @@
-<p>tour-detail works!</p>
+<div *ngIf="tour">
+    <div class="modal-body">
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="row">
+        <h5>{{tour.name}}</h5>
+    </div>
+</div>
